# arl

./: CMakeLists.txt  ChangesToDo  README.md
apps/clean_application/: CMakeLists.txt  main.cpp
apps/new_logging_test/: CMakeLists.txt  main.cpp  some_functions.cpp  some_functions.h
apps/test_image_application/: CMakeLists.txt  main.cpp
include/arl/: math.h
include/arl/image/: image.h
include/arl/image/disparity/: disparity_estimation.h
include/arl/image/opencv_wrapper/: opencv_wrapper.h
include/arl/math/: axis_angle.h  circle.h  complex.h  coordinates.h  future_updates.h  general_math_functions.h  general_matrix_math_functions.h  geometry.h  lin_alg.h  line_2d.h  line_3d.h  math.h  math_core.h  new_functions.h  ordered_set.h  plane.h  pol_spherical_cyl.h  polygon.h  pose.h  quaternion.h  rectangle.h  roll_pitch_yaw.h  sphere.h  structures.h  transformations.h  triangle.h
include/arl/math/class_defs/: forward_decl.h
include/arl/math/coordinates/: complex.h  coordinates_common.h  cylindrical.h  polar.h  spherical.h
include/arl/math/coordinates/class_defs/: complex_class_def.h  cylindrical_class_def.h  polar_class_def.h  spherical_class_def.h
include/arl/math/geometry/: circle.h  line_2d.h  line_3d.h  ordered_set.h  plane.h  polygon.h  rectangle.h  sphere.h  triangle.h
include/arl/math/geometry/class_defs/: circle_class_def.h  line_2d_class_def.h  line_3d_class_def.h  ordered_set_class_def.h  plane_class_def.h  polygon_class_def.h  rectangle_class_def.h  sphere_class_def.h  triangle_class_def.h
include/arl/math/lin_alg/: matrix_vector_dynamic.h  matrix_vector_fixed.h
include/arl/math/lin_alg/matrix_dynamic/: matrix_dynamic.h  matrix_math_functions.h
include/arl/math/lin_alg/matrix_dynamic/class_defs/: matrix_dynamic_class_def.h
include/arl/math/lin_alg/matrix_dynamic/decompositions/: matrix_decompositions.h
include/arl/math/lin_alg/matrix_fixed/: matrix_fixed.h  matrix_fixed_class_def.h  matrix_fixed_functions.h
include/arl/math/lin_alg/vector_dynamic/: vector_dynamic.h  vector_math_functions.h
include/arl/math/lin_alg/vector_dynamic/class_defs/: vector_dynamic_class_def.h
include/arl/math/lin_alg/vector_fixed/: vector_fixed.h
include/arl/math/lin_alg/vector_low_dim/: vec2d.h  vec3d.h  vec4d.h
include/arl/math/lin_alg/vector_low_dim/class_defs/: vec2d_class_def.h  vec3d_class_def.h  vec4d_class_def.h
include/arl/math/matrix_vector/: matrix.h  matrix_decompositions.h  matrix_vector.h  matrix_vector_headers.h  vec2d.h  vec3d.h  vec4d.h  vector.h
include/arl/math/misc/: forward_decl.h  math_macros.h  math_type_definitions.h
include/arl/math/structures/: end_index.h  index_span.h  interval_1d.h  lookup_grid.h
include/arl/math/transformations/: axis_angle.h  pose.h  quaternion.h  roll_pitch_yaw.h  transformations_common.h
include/arl/math/transformations/class_defs/: axis_angle_class_def.h  pose_class_def.h  quaternion_class_def.h  roll_pitch_yaw_class_def.h
include/arl/utilities/: algorithm.h  color_map.h  colors.h  commandline_colors.h  csv_utils.h  filesystem_utils.h  json_file.h  logging.h  misc_utils.h  string_utils.h
include/arl/utilities/data_logging/: data_logger.h  save_data_class.h
source/image/disparity/: CMakeLists.txt  disparity_estimation.cpp
source/image/opencv_wrapper/: CMakeLists.txt  opencv_wrapper.cpp
source/utilities/colors/: CMakeLists.txt  colors.cpp
source/utilities/commandline_colors/: CMakeLists.txt  commandline_colors.cpp
source/utilities/csv_utils/: CMakeLists.txt  csv_utils.cpp
source/utilities/filesystem/: CMakeLists.txt  filesystem_utils.cpp
source/utilities/misc_utils/: CMakeLists.txt  misc_utils.cpp
source/utilities/string_utils/: CMakeLists.txt  string_utils.cpp
source/utilities/textfile/: CMakeLists.txt  textfile.cpp
source/utilities/textfile_utils/: CMakeLists.txt  textfile_utils.cpp
test/: run_tests.sh
test/rapidcheck_tests/: rc_math.cpp  rc_math_main.cpp
test/unit_tests/math/: CMakeLists.txt  math_test_utils.h  new_tests0.cpp  test_axis_angle.cpp  test_general_matrix_math_functions.cpp  test_line3d.cpp  test_matrix.cpp  test_quaternion.cpp  test_roll_pitch_yaw.cpp  test_vec2d.cpp  test_vec3d.cpp  test_vec4d.cpp  test_vector.cpp  test_vector_indexing.cpp  test_vector_matrix.cpp
test/unit_tests/math/test_coordinates/: test_complex.cpp
test/unit_tests/math/test_geometry/: test_circle.cpp  test_line2d_hom.cpp  test_line2d_par.cpp
test/unit_tests/math/test_lin_alg/test_matrix/: test_matrix.cpp  test_matrix_initialization.cpp  test_matrix_math_functions.cpp
test/unit_tests/math/test_lin_alg/test_matrix_fixed/: test_matrix_fixed.cpp
test/unit_tests/math/test_lin_alg/test_vector/: test_vector.cpp  test_vector_indexing.cpp  test_vector_math_functions.cpp
test/unit_tests/math/test_lin_alg/test_vector_low_dim/: test_vec2d.cpp  test_vec3d.cpp
test/unit_tests/math/test_structures/: test_lookup_grid.cpp  test_structures.cpp
test/unit_tests/math/test_transformations/: test_axis_angle.cpp  test_quaternion.cpp  test_roll_pitch_yaw.cpp
test/unit_tests/utils/: CMakeLists.txt  string_test_data.h  test_algorithm.cpp  test_csv_utils.cpp  test_filesystem_utils.cpp  test_misc_utils.cpp  test_string_utils.cpp  test_textfile_utils.cpp  utils_test_utilities.h
test/unit_tests/utils/test_data_logger/: test_data_logger.cpp  test_data_logger_variable.cpp
